idcat/namespace-idcat.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idcat
  labels:
    trust: cluster-local
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
