idcat/deployment-idcat-noa-re.yaml
# Source: idcat.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: idcat-noa-re
  labels:
    app: idcat-noa-re
  namespace: idcat
  annotations:
    noa.re/manifest-id: f3f07e8619cda0c3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: idcat-noa-re
  template:
    metadata:
      labels:
        app: idcat-noa-re
      annotations:
        checksum/config: 774bb53de715cf9fe7897f3c27bd532f6dcd4c9b2e927072a8254763cfb741ed
    spec:
      containers:
      - name: idcat-noa-re
        image: public.ecr.aws/portswigger-platform/idcat:934b43e7
        args:
        - --debug
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
        volumeMounts:
        - name: idcat-noa-re-config
          mountPath: /config
        - name: app-keys
          mountPath: /app-keys
        - name: random-secrets
          mountPath: /random-secrets
        - name: tokens
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: idcat-noa-re-config
        configMap:
          name: idcat-noa-re-config
      - name: app-keys
        secret:
          secretName: app-keys
      - name: random-secrets
        secret:
          secretName: idcat-noa-re
      - name: tokens
        projected:
          sources:
          - serviceAccountToken:
              path: nats
              expirationSeconds: 3600
              audience: nats
