idcat/gateway-idcat-noa-re.yaml
# Source: idcat.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: idcat-noa-re
  namespace: idcat
  annotations:
    noa.re/manifest-id: aada8e4799a6ad9c
spec:
  gatewayClassName: eg
  listeners:
  - name: idcat-noa-re
    protocol: HTTPS
    hostname: idcat.noa.re
    port: 443
    tls:
      certificateRefs:
      - name: idcat-noa-re-tls
        group: ''
        kind: Secret
