idcat/httproute-idcat-noa-re.yaml
# Source: idcat.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idcat-noa-re
  namespace: idcat
  annotations:
    noa.re/manifest-id: 1e5994db7689e657
spec:
  parentRefs:
  - name: idcat-noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - idcat.noa.re
  rules:
  - backendRefs:
    - name: idcat-noa-re
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
